syntax = "proto3";

// 命 令 号: 1030
// 命令名称: voice_tts_play
// 命令描述: tts播放
// 文件名称: dec1030_vr_tts_play.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbVoiceTtsPlay";

message VoiceTtsPlayRequest {
  // ATTR: REQUSET
  string language = 1;
  string text = 2;
  uint32 session_id = 3;
}

message VoiceTtsPlayResponse {

}
